<resources>
    <string name="app_name">SNAI</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>

    <string name="crear_taller_psicologia">Crear Taller</string>
    <string name="crear_taller_juridico">Crear Taller</string>
    <string name="crear_taller_inspector_educador">Crear Taller</string>

    <string name="gestion_talleres_psicologo">Gestionar Talleres</string>
    <string name="gestion_talleres_juridico">Gestionar Talleres</string>
    <string name="gestion_talleres_inspector_educador">Gestionar Talleres</string>

    <string name="gestion_informes_psicologo">Gestionar Informes</string>
    <string name="gestion_informes_juridico">Gestionar Informes</string>
    <string name="gestion_informes_inspector_educador">Gestionar Informes</string>

    <string name="crear_usuario">Crear Usuario</string>
    <string name="desactivar_usuario">Usuarios Desactivados</string>
    <string name="activar_usuario">Usuarios Activos</string>

    <string name="prompt_user">Usuario</string>
    <string name="prompt_password">Constraseña</string>
    <string name="action_login">Acceder</string>
    <string name="msj_exito">"Login exitoso!"</string>
    <string name="user_invalido">Usuario incorrecta</string>
    <string name="password_invalido">Contraseña incorrecta</string>
    <string name="error_login">"Accede no permitido"</string>

    <string name="txt_titulo_taller">Taller</string>
    <string name="txt_titulo_infome">Informe</string>
    <string name="txt_numero_taller">Número de taller</string>
    <string name="txt_fecha_taller">Fecha</string>
    <string name="txt_hora_inicio_taller">Hora Inicio</string>
    <string name="txt_hora_fin_informe">Hora Fin</string>
    <string name="txt_numero_adolescentes_informe">Número Adolescentes</string>
    <string name="txt_objetivo_general_informe">Objetivo</string>
    <string name="txt_socializacion_desarrollo">Socialización Desarrollo</string>
    <string name="txt_socializacion_objetivos">Socialización Objetivos</string>
    <string name="txt_cierre_evaluacion">Cierre y Evaluacion</string>
    <string name="txt_conclusiones">Conclusiones</string>
    <string name="txt_recomendaciones">Recomendaciones</string>
    <string name="txt_observaciones">Observaciones</string>

    <string name="txt_rol">Tipo</string>

    <string name="txt_nombres">Nombres</string>
    <string name="txt_apellidos">Apellidos</string>
    <string name="txt_cedula">Cédula</string>
    <string name="txt_documento">Documento</string>
    <string name="txt_asistio">¿Asistió?</string>

    <string name="prompTipoCentro">Tipo Centro</string>
    <string-array name="tipoCentro">
        <item>UZDI</item>
        <item>CAI</item>
    </string-array>
    <string name="title_activity_ver_info_taller">Información Taller</string>

    <string name="prompRol">Rol</string>
    <string-array name="rol">
        <item>ADMINISTRADOR</item>
        <item>SUBDIRECTOR</item>
        <item>DIRECTOR TECNICO DE MEDIDAS PRIVATIVAS Y ATENCIÓN</item>
        <item>COORDINADOR CAI</item>
        <item>DIRECTOR TECNICO DE MEDIDAS NO PRIVATIVAS Y PREVENCIÓN</item>
        <item>LIDER UZDI</item>
        <item>EQUIPO TECNICO PSICOLOGO UZDI</item>
        <item>TRABAJADOR SOCIAL UZDI</item>
        <item>EQUIPO TECNICO JURIDICO UZDI</item>
        <item>EQUIPO TECNICO PSICOLOGO CAI</item>
        <item>TRABAJADOR SOCIAL CAI</item>
        <item>EQUIPO TECNICO JURIDICO CAI</item>
        <item>INSPECTOR EDUCADOR</item>
    </string-array>

    <string-array name="nacionalidad">
        <item>ECUATORIANA</item>
        <item>EXTRANJERA</item>
    </string-array>
</resources>
