<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="12dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Controlador.Activity.VerInformeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_titulo_infome"
        android:textSize="20dp"
        android:textStyle="bold"
        android:gravity="center"
        android:id="@+id/txtTemaInformeSeleccionado"
        android:paddingBottom="20dp"
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_numero_taller"
        android:id="@+id/txtNumeroTallerSeleccionado"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_fecha_taller"
        android:id="@+id/txtFechaTallerSeleccionado"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_hora_inicio_taller"
        android:id="@+id/txtHoraInicioTallerSeleccionado"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_hora_fin_informe"
            android:id="@+id/txtHoraFinInformeSeleccionado"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_numero_adolescentes_informe"
            android:id="@+id/txtNumeroAdolescenteInformeSeleccionado"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_objetivo_general_informe"
            android:id="@+id/txtObjetivoGeneralInformeSeleccionado"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_socializacion_desarrollo"
            android:id="@+id/txtSocializacionDesarrolloInformeSeleccionado"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_socializacion_objetivos"
            android:id="@+id/txtSocializacionObjetivosInformeSeleccionado"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_cierre_evaluacion"
            android:id="@+id/txtCierreEvaluacionInformeSeleccionado"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_conclusiones"
            android:id="@+id/txtConclusionesInformeSeleccionado"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_recomendaciones"
            android:id="@+id/txtRecomendacionesInformeSeleccionado"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_observaciones"
            android:id="@+id/txtObservacionesInformeSeleccionado"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="---------------------------------------------------------------------------------"/>

</LinearLayout>