<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp"
        android:background="#ffff"
        android:layout_marginBottom="8dp">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/txtTema"
                android:gravity="start"
                android:text="@string/txt_titulo_infome"
                android:textSize="14sp"
                android:fontFamily="sans-serif-medium"
                android:paddingBottom="5px"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/txtFecha"
        />

        <TextView
                android:id="@+id/txtFecha"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="11sp"
                android:fontFamily="sans-serif-light"
                android:text="@string/txt_fecha_taller"
                android:textAlignment="textEnd"
                android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <TextView
            android:id="@+id/txtTipoTaller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:fontFamily="sans-serif-light"
            android:text="@string/txt_rol"/>
    <TextView
            android:id="@+id/txtNumeroTaller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:fontFamily="sans-serif-light"
            android:text="@string/txt_numero_taller"
    />
</LinearLayout>