<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="#ffff"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controlador.Activity.EditarRegistroAsistenciaActivity">

    <LinearLayout
                  android:padding="12dp"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="LISTADO DE ASISTENCIA"
                android:textSize="20dp"
                android:textStyle="bold"
                android:gravity="center"
                android:paddingBottom="20dp"/>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/txt_apellidos"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="15dp"
                    android:text="@string/txt_nombres"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/txt_cedula"
                    android:textSize="15dp"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/txt_documento"
                    android:textSize="15dp"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/txt_asistio"
                    android:textSize="15dp"/>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_registro_asistencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_agregar_informe_nuevo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:tooltipText="Agregar informe"
            android:src="@drawable/ic_next"/>
</android.support.design.widget.CoordinatorLayout>