<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/login_activity"
        android:orientation="vertical"
        tools:context=".Controlador.Activity.LoginActivity">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="20dp"
            android:orientation="vertical">

        <EditText
                android:id="@+id/user_login"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_user"
                android:ems="50"
                android:hint="@string/prompt_user"
                android:padding="10dp"
                android:textColor="@color/colorPrimary"
                android:textSize="21sp"/>

        <EditText
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_password"
                android:ems="10"
                android:hint="@string/prompt_password"
                android:padding="10dp"
                android:textColor="@color/colorPrimary"
                android:textSize="21sp"/>
        <Button
                android:id="@+id/btn_acceder_login"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="30dp"
                android:text="@string/action_login"
                android:textAllCaps="false"
                android:textSize="21sp"/>

        <ProgressBar
                android:id="@+id/loading"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="64dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/password_login"
                app:layout_constraintStart_toStartOf="@+id/password_login"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/msj_exito"
                android:textSize="21sp"/>
    </LinearLayout>

</LinearLayout>